# claudesavvy

./: README.md  SECURITY.md  claudesavvy.spec  debug_test_snapshot.md  files_page_default.md  final_verification_snapshot.md  monitor-claude.spec  projects_page_after_restart.md  projects_page_snapshot.md  pyproject.toml  setup.py  test_pricing.py  test_projects_with_time_filter.md  threads_post.txt
.github/: FUNDING.yml
.github/workflows/: build-binaries.yml  ci.yml  codeql.yml  publish-pypi.yml
src/claude_monitor/: cli.py
src/claude_monitor/analyzers/: configuration.py  project_analyzer.py  tokens.py
src/claude_monitor/models/: __init__.py
src/claude_monitor/parsers/: configuration_scanner.py  sessions.py  skills.py
src/claude_monitor/web/: app.py
src/claude_monitor/web/routes/: dashboard.py
src/claude_monitor/web/services/: dashboard_service.py
src/claude_monitor/web/templates/layouts/: app.html
src/claude_monitor/web/templates/pages/: configuration.html  features.html  files.html  integrations.html  projects.html  tokens.html
src/claude_monitor/web/templates/partials/: context_utilization_charts.html  dashboard_charts.html  dashboard_content.html  features_content.html  integrations_content.html  projects_content.html  (+1 more)
src/claudesavvy/: __init__.py  cli.py
src/claudesavvy/analyzers/: project_analyzer.py  tokens.py
src/claudesavvy/parsers/: sessions.py  skills.py
src/claudesavvy/utils/: pricing.py
src/claudesavvy/web/routes/: dashboard.py
src/claudesavvy/web/services/: dashboard_service.py
src/claudesavvy/web/templates/: base.html
(+18 files in other folders)
