[project]
name = "claude-monitor"
version = "0.1.0"
description = "CLI tool to track and analyze Claude Code usage metrics"
authors = [{name = "Allan Napier"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "flask>=2.3.0",
]

[project.scripts]
claude-monitor = "claude_monitor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
